<resources>
    <string name="app_name">ArTranslator</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome_translation">欢迎使用</string>
    <string name="app_name_translation">氩极随时译</string>
    <string name="translated">Translated</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_descr">We respect your privacy. We need these permissions below when we provide the services to you. We won\'t leak your personal data.</string>
    <string name="internet_connection">Internet</string>
    <string name="internet_connection_descr">We need to get translation results from the Internet.</string>
    <string name="i_agree">I Agree</string>
    <string name="translation_engine">Translation Engine</string>
    <string name="engine_descr">Please choose the translation engine to continue. You can change it later in the settings.</string>
    <string name="google_translate">Google</string>
    <string name="deepl_translate">DeepL</string>
    <string name="next_step">Next Step</string>
    <string name="finish">Finish!</string>
    <string name="well_done">Well Done!</string>
    <string name="finish_descr">Everything is OK. Enjoy your time with ArTranslator now!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="translate_from_text">From Text</string>
    <string name="powered_by_Google">Powered By Google</string>
    <string name="powered_by_DeepL">Powered By DeepL</string>
    <string name="translate_from_speech">From Speech</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="en">English</string>
    <string name="zh_CN">Simplified Chinese</string>
    <string name="switch_engine">Switch the engine</string>
    <string name="buy_me_a_coffee">Buy Me a Coffee</string>
    <string name="buy_me_a_coffee_descr">Thanks for supporting</string>
    <string name="hello_bro">Hello (≧∀≦)ゞ</string>
    <string name="donate_descr">We work on this software so hard. We\'ll be happy if you buy us a coffee! Thanks for supporting!</string>
    <string name="text_translate">Text Translate</string>
    <string name="input_text">Type to translate here...</string>
    <string name="translate_result">Translate Result...</string>
    <string name="cannot_be_empty">You haven\'t type anything yet!</string>
    <string name="network_error">Network Error</string>
    <string name="lang_choosing">Language Choosing</string>
    <string name="source_lang">Source Language</string>
    <string name="target_lang">Target Language</string>
    <string name="ja">Japanese</string>
    <string name="cannot_be_same">The source language and target language cannot be same!</string>
    <string name="translate_result_from">"Result is from: "</string>
    <string name="engine_invalid">Invalid Engine Configuration</string>
    <string name="result_empty">The result is empty!</string>
    <string name="wechat_pay">Wechat Pay</string>
    <string name="scan_with_wechat">Scan with WeChat</string>
    <string name="alipay">Alipay</string>
    <string name="scan_with_alipay">Scan with Alipay</string>
    <string name="copyright">Copyright © 2022 - Now Arnio Dev Team.\nAll Rights Reserved.</string>
    <string name="check_update">Check Update</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="ArT_about">Developed by Arnio Dev</string>
    <string name="access_denied">Access Denied</string>
    <string name="try2swipe">Try to Swipe Left or Right Here!</string>
    <string name="got_it">Got it!</string>
    <string name="EULA">EULA</string>
    <string name="contributor">Contributors</string>
    <string name="qq_group">QQ Group</string>
    <string name="scan_with_qq">Scan with QQ</string>
    <string name="arnio_dev_proj">Arnio Dev\'s Project</string>
    <string name="eula_content">End User License Agreement\n\nPlease read the following agreement carefully before installing or using the ArTranslator app (hereinafter referred to as the "App"). The installation or use of the App signifies your agreement to comply with all terms and conditions of this agreement. If you do not agree to these terms and conditions, do not install or use this application.\n\n1. License Grant\nArnio Dev is the developer and owner of the ArTranslator app. Arnio Dev grants you a non-exclusive, non-transferable, limited license to download, install, and use this application on your device.\n\n2. Intellectual Property\nThe ownership and intellectual property of this application belong to Arnio Dev. This application is protected by copyright laws, international copyright treaties, and other intellectual property laws and treaties.\n\n3. Use Restrictions\nYou may not:\n(1) modify, disassemble, decompile, or reverse engineer this application.\n(2) rent, lease, loan, sell, sublicense, or otherwise transfer or distribute this application or any of its rights.\n(3) make the application available to third parties in any way.\n(4) use this application in any way that may damage the reputation of Arnio Dev or its affiliates.\n\n4. Device and System\nArnio Dev does not provide any guarantees for any device or system, including but not limited to hardware and operating systems. Arnio Dev is not responsible for any hardware problems that may occur during use. If you choose to participate in the beta testing or other projects that require the installation of unstable versions of the application, Arnio Dev is not responsible for the stability of the application or your device.\n\n5. Express Warranty\nArnio Dev warrants to you that the functions and performance of the application comply with the documentation and instructions published by Arnio Dev. This warranty applies only to the use of the application on the device and operating system environment where the application is located and to your compliance with all terms and conditions of this agreement when using the application. If you have any questions or concerns about this application, please contact Arnio Dev\'s customer support for clarification.\n\n6. Limitation of Liability\nUnless otherwise expressly provided, Arnio Dev shall not be liable for any direct, indirect, special, incidental, or consequential damages arising from the use of this application, including but not limited to loss of profits, business interruption, data loss, or other commercial damages, to the maximum extent permitted by applicable law. In addition, Arnio Dev is not responsible for the use of any third-party software or services, even if such software or services are provided through this application.\n\n7. Agreement Modification\nArnio Dev has the right to modify the terms and conditions of this agreement at any time as needed. If this agreement changes, Arnio Dev will publish the latest version of the agreement in the application, and the user should review the latest version of the agreement in a timely manner. If the user does not agree to the modified agreement, they should immediately stop using this application. If the user continues to use this application, it will be deemed that the user has accepted the modified agreement. The Simplified Chinese version of this agreement shall have legal effect and shall prevail over any other language version.\n\n8. Termination of Agreement\nUsers may terminate this agreement at any time by ceasing to use the application. Arnio Dev may also terminate this agreement at any time if Arnio Dev believes that the user has violated any terms and conditions of this agreement.\n\n9. Applicable Law and Jurisdiction\nThis agreement shall be governed by the laws of mainland China and shall be interpreted in accordance with the laws of mainland China. If any part of this agreement conflicts with the laws of mainland China or the user\'s jurisdiction, the relevant laws shall prevail.\n\n10. Entire Agreement\nThis agreement constitutes the entire agreement between you and Arnio Dev regarding the application and supersedes all prior agreements.</string>
    <string name="eula_hint">Before using this application, please read the End User License Agreement (EULA) carefully. The EULA sets forth the terms and conditions under which you may use this application. If you do not agree to these terms, please do not use this application. By using this application, you agree to comply with all the terms and conditions set forth in the EULA.</string>
    <string name="checking_update">Checking Update...</string>
    <string name="up2date">You are up-to-date.</string>
    <string name="new_update">New Update</string>
    <string name="new_ver">New version:&#32;</string>
    <string name="updatelog">Update Log:</string>
    <string name="loading">Loading...</string>
    <string name="bilibili">Bilibili</string>
    <string name="scan_with_bili">Scan with Bilibili</string>
    <string name="fetching_update">Fetching Update...</string>
    <string name="close_the_app">Close the APP</string>
    <string name="Tap_here_to_close">Tap here to close</string>
    <string name="ko">Korean</string>
    <string name="ru">Russian</string>
    <string name="fr">French</string>
    <string name="vi">Vietnamese</string>
    <string name="result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>