<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.InitialActivity"
    android:background="@drawable/background"
    android:animateLayoutChanges="true"
    android:id="@+id/init_activity_view"
    android:transitionName="tapToStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:id="@+id/back_btn_layout">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:src="@drawable/back_btn"
                android:layout_marginStart="12dp"
                android:id="@+id/back_btn"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/init_translation_background"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:id="@+id/translation_example"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:alpha="0.65"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/welcome_translation"
                android:textColor="@color/white"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:alpha="0.65"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:text="@string/app_name_translation"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:orientation="horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginTop="3dp">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/translation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:text="@string/translated"
                    android:textColor="@color/white"
                    android:layout_marginStart="5dp"
                    android:alpha="0.48"
                    android:textSize="8sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/tap_to_start_btn"
            android:id="@+id/tap_to_start"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:text="@string/tap_to_start"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="5dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/next_step" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>