<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NewVersionActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:id="@+id/back_btn_layout">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back_btn"
                android:layout_marginStart="12dp"
                android:id="@+id/back_btn"/>

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="12dp"
                android:textSize="14sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:format12Hour="h:mm a"
                android:format24Hour="HH:mm" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:animateLayoutChanges="true"
            android:id="@+id/info_view"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/gears"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/new_update"
                    android:layout_marginStart="25dp"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/new_ver"
                    android:textSize="11sp"
                    android:textColor="#707070"
                    android:id="@+id/newVerView"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/updatelog"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="3dp"
                    android:textColor="#707070"
                    android:id="@+id/updLogView"
                    android:text="@string/loading"
                    android:textSize="9sp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/loadingView">
            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/pBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/fetching_update"
                android:id="@+id/status"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>