<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/translate_background"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/quick_translate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/translation_white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:text="@string/translate_from_text"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/powered_by_who"
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:alpha=".55"
                            android:textColor="@color/white"
                            android:textSize="8sp" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5"
                android:id="@+id/voice_translate"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".55">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/voice"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:textColor="@color/white"
                            android:text="@string/translate_from_speech"
                            android:textSize="9sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"
                            android:alpha=".55"
                            android:textColor="@color/white"
                            android:textSize="7sp"
                            android:text="@string/service_unavailable"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <!-- TODO: Language Choosing -->

    </LinearLayout>

</FrameLayout>