<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity"
    android:animateLayoutChanges="true"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:id="@+id/back_btn_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:layout_marginStart="12dp"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="12dp"
                android:textSize="14sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:format12Hour="h:mm a"
                android:format24Hour="HH:mm" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="75"
                android:background="@drawable/translate_background"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/quick_translate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/translation_white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="15dp"
                                android:text="@string/translate_from_text"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                            <TextView
                                android:id="@+id/powered_by_who"
                                android:layout_width="wrap_content"
                                android:layout_height="15dp"
                                android:alpha=".55"
                                android:textColor="@color/white"
                                android:textSize="8sp" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8.5"
                    android:id="@+id/voice_translate"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="10dp"
                        android:alpha=".55">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/voice"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="15dp"
                                android:textColor="@color/white"
                                android:text="@string/translate_from_speech"
                                android:textSize="9sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="10dp"
                                android:alpha=".55"
                                android:textColor="@color/white"
                                android:textSize="7sp"
                                android:text="@string/service_unavailable"/>

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="33"
                android:layout_marginTop="5dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/more_view_pager" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>